--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -534,5 +534,24 @@
 <!--&lt;!&ndash; * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * &ndash;&gt;-->
 
 
-
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <p style="flex: 1 1 auto;">Equale</p>
+        <mat-icon aria-hidden="false" aria-label="menu" [matMenuTriggerFor]="menu">menu</mat-icon>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item aria-label="login aluno">
+                <mat-icon>person</mat-icon>
+                <span>Login Aluno</span>
+            </button>
+            <button mat-menu-item aria-label="login doador">
+                <mat-icon>person_outline</mat-icon>
+                <span>Login Doador</span>
+            </button>
+            <button mat-menu-item aria-label="sobre o equale">
+                <mat-icon>info</mat-icon>
+                <span>Sobre o equale</span>
+            </button>
+        </mat-menu>
+    </mat-toolbar-row>
+</mat-toolbar>
 <router-outlet></router-outlet>
