aluno cadastro e historia

--- a/src/app/student-card/student-card.component.html
+++ b/src/app/student-card/student-card.component.html
@@ -1,9 +1,4 @@
 <mat-card>
-<!--    <mat-card-header>-->
-<!--        <div mat-card-avatar class="example-header-image"></div>-->
-<!--        <mat-card-title>Shiba Inu</mat-card-title>-->
-<!--        <mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
-<!--    </mat-card-header>-->
     <img mat-card-image
          src="https://www.meioemensagem.com.br/wp-content/uploads/2019/05/CHARLINHO_QuiosqueMcFritas.jpg"
          [alt]="'foto do aluno'+id">
@@ -14,7 +9,7 @@
         </p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-button aria-label="história completa">HISTÓRIA COMPLETA</button>
+        <button mat-button aria-label="história completa" routerLink="aluno/1">HISTÓRIA COMPLETA</button>
         <button mat-button aria-label="doar para o equale">DOAR</button>
     </mat-card-actions>
 </mat-card>
