--- a/src/app/student-register/student-register.component.scss
+++ b/src/app/student-register/student-register.component.scss
@@ -1,5 +1,7 @@
 form {
   padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 mat-form-field {
@@ -7,5 +9,39 @@ mat-form-field {
 }
 
 fieldset {
+  display: flex;
   margin-bottom: 10px;
+
+  mat-form-field {
+    width: 100%;
+  }
+}
+
+.fileButton {
+  margin-bottom: 10px;
+}
+
+@media (min-width: 768px) {
+  form { padding: 20px; }
+
+  fieldset {
+    width: 50%;
+    margin: 10px auto;
+  }
+
+  mat-form-field {
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  img {
+    margin: 0 auto;
+    width: 50%;
+  }
+
+  button {
+    width: 50%;
+    margin: 0 auto;
+  }
+
 }
